# siliconfer

./: .gitignore  README.md  pyproject.toml
eval/: plots.py
scripts/: benchmark.py  quantize.py  run.py  run_benchmarks.py
siliconfer/: __init__.py
siliconfer/engine/: draft_training.py  generate.py  loader.py  q4_loader.py  speculative.py
siliconfer/eval/: __init__.py  bench.py  perplexity.py
siliconfer/kernels/: __init__.py
siliconfer/kernels/metal/: q4_attention.py
siliconfer/kernels/neon/: CMakeLists.txt  __init__.py  bindings.cpp  build_kernel.sh  q4_gemm.cpp  q4_gemv.cpp  q4_gemv.h
siliconfer/model/: config.py  draft_head.py  kv_cache.py  layers.py  llama.py  q4_linear.py
siliconfer/quant/: __init__.py  awq.py  calibration.py  gptq.py  hqq.py  mixed_precision.py  primitives.py  rtn.py  sinq.py
tests/: conftest.py  test_awq.py  test_draft_head.py  test_gptq.py  test_hqq.py  test_integration.py  test_kernel.py  test_kv_cache.py  test_logit_parity.py  test_metal_attention.py  test_mixed_precision.py  test_primitives.py  test_sinq.py  test_smoke.py  test_speculative.py
